[gd_scene load_steps=22 format=2]

[ext_resource path="res://logic/paddle.gd" type="Script" id=1]
[ext_resource path="res://paddle.png" type="Texture" id=2]
[ext_resource path="res://logic/Left.gd" type="Script" id=3]
[ext_resource path="res://logic/ball.gd" type="Script" id=4]
[ext_resource path="res://ball.png" type="Texture" id=5]
[ext_resource path="res://separator.png" type="Texture" id=6]
[ext_resource path="res://logic/wall.gd" type="Script" id=7]
[ext_resource path="res://logic/ceiling_floor.gd" type="Script" id=8]
[ext_resource path="res://LeftWall.gd" type="Script" id=9]
[ext_resource path="res://Hey Comic.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://Action RPG Resources/Texture/Cima.png" type="Texture" id=11]
[ext_resource path="res://Action RPG Resources/Texture/Baixo.png" type="Texture" id=12]
[ext_resource path="res://Action RPG Resources/Texture/cimaON.png" type="Texture" id=13]
[ext_resource path="res://Action RPG Resources/Texture/baixoON.png" type="Texture" id=14]

[sub_resource type="GDScript" id=5]
script/source = "extends Node2D

var FILE_NAME = 'user://infos.json'

var player = {
	'isMobile': false
}

func addCoins(qnt):
	var pontosAtual = int($Pontos.text) #Pega os pontos atuais e tranforma em Número
	var pontosAdicionados = pontosAtual ++ qnt #Adiciona o incremento passado pelo parametro da função
	var pontosInString = str(pontosAdicionados) #Retorna a soma para o formato String
	$Pontos.text = pontosInString #Substitui o valor dos pontos pelo valor adicionado

func loadIsMobile():
	var file = File.new()
	if file.file_exists(FILE_NAME):
		file.open(FILE_NAME, File.READ)
		var data = parse_json(file.get_as_text())
		file.close()
		if typeof(data) == TYPE_DICTIONARY:
			player = data
			return data
		else:
			printerr(\"Arquivo corrompido\")
	else:
		printerr(\"Sem informações salvas!\")

# Called when the node enters the scene tree for the first time.
func _ready():
	loadIsMobile()
	
func _process(delta):
	if (player.isMobile == true):
		$PongBaixo.visible = true
		$PongCima.visible = true
	
	if $Pontos.text == '5':
		$Parabens.visible = true
		get_tree().paused = true
		yield(get_tree().create_timer(3.0), \"timeout\")
		get_tree().paused = false
		get_tree().change_scene(\"res://D&IMental.tscn\")
	else:
		pass

##Retornar para a cena principal quando o ESC e apertado
func _unhandled_input(event):
	if event is InputEventKey:
		if event.pressed and event.scancode == KEY_ESCAPE:
			get_tree().change_scene(\"res://D&IMental.tscn\")
"

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 16 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 4 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 93.5 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 159.5, 10 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 10 )

[node name="Pong" type="Node2D"]
script = SubResource( 5 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 320.0
margin_bottom = 179.0
color = Color( 0.141176, 0.152941, 0.164706, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="Area2D" parent="."]
modulate = Color( 0, 1, 1, 1 )
position = Vector2( 20, 85 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Left"]
position = Vector2( 0, 1 )
texture = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="Left"]
shape = SubResource( 1 )

[node name="Right" type="Area2D" parent="."]
modulate = Color( 1, 0, 1, 1 )
position = Vector2( 289, 85 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Right"]
texture = ExtResource( 2 )

[node name="Collision" type="CollisionShape2D" parent="Right"]
shape = SubResource( 1 )

[node name="Ball" type="Area2D" parent="."]
position = Vector2( 162, 86 )
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="Ball"]
texture = ExtResource( 5 )

[node name="Collision" type="CollisionShape2D" parent="Ball"]
shape = SubResource( 2 )

[node name="Separator" type="Sprite" parent="."]
position = Vector2( 163, 89 )
scale = Vector2( 0.5, 0.45 )
texture = ExtResource( 6 )

[node name="LeftWall" type="Area2D" parent="."]
position = Vector2( -10, 200 )
script = ExtResource( 9 )

[node name="Collision" type="CollisionShape2D" parent="LeftWall"]
position = Vector2( 1, -111 )
shape = SubResource( 3 )

[node name="RightWall" type="Area2D" parent="."]
position = Vector2( 330, 191 )
script = ExtResource( 7 )

[node name="Collision" type="CollisionShape2D" parent="RightWall"]
position = Vector2( 0, -106.5 )
shape = SubResource( 3 )

[node name="Ceiling" type="Area2D" parent="."]
position = Vector2( 320, -10 )
script = ExtResource( 8 )

[node name="Collision" type="CollisionShape2D" parent="Ceiling"]
position = Vector2( -160.5, 0 )
shape = SubResource( 4 )

[node name="Floor" type="Area2D" parent="."]
position = Vector2( 320, 410 )
script = ExtResource( 8 )
_bounce_direction = -1

[node name="Collision" type="CollisionShape2D" parent="Floor"]
position = Vector2( -158, -220 )
shape = SubResource( 4 )

[node name="Pontos" type="Label" parent="."]
margin_left = 280.0
margin_right = 320.0
margin_bottom = 20.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Parabens" type="Label" parent="."]
visible = false
margin_left = 39.0
margin_top = 22.0
margin_right = 298.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 7 )
text = "Parabéns, você conseguiu ajudar."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PongCima" type="TouchScreenButton" parent="."]
position = Vector2( 250, 107 )
scale = Vector2( 0.333333, 0.333333 )
normal = ExtResource( 11 )
pressed = ExtResource( 13 )

[node name="PongBaixo" type="TouchScreenButton" parent="."]
position = Vector2( 250, 146 )
scale = Vector2( 0.333333, 0.333333 )
normal = ExtResource( 12 )
pressed = ExtResource( 14 )

[connection signal="area_entered" from="Left" to="Left" method="_on_area_entered"]
[connection signal="area_entered" from="Right" to="Right" method="_on_area_entered"]
[connection signal="area_entered" from="LeftWall" to="LeftWall" method="_on_wall_area_entered"]
[connection signal="area_entered" from="RightWall" to="RightWall" method="_on_wall_area_entered"]
[connection signal="area_entered" from="Ceiling" to="Left" method="_on_Ceiling_area_entered"]
[connection signal="area_entered" from="Ceiling" to="Ceiling" method="_on_area_entered"]
[connection signal="area_entered" from="Floor" to="Left" method="_tocouEmbaixo"]
[connection signal="area_entered" from="Floor" to="Floor" method="_on_area_entered"]
[connection signal="pressed" from="PongCima" to="Right" method="_touchUpPong"]
[connection signal="pressed" from="PongBaixo" to="Right" method="_touchDownPong"]
